--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,8 @@
 
 <footer>
   <p>
-    Want more horny debauchery? Try <a href="https://joi.how">joi.how</a>.
+    Want more horny debauchery? Try <a href="https://joi.how">joi.how</a>.<br/>
+    <%= link_to 'Need help with Walltaker?', help_path %>
   </p>
   <small>
     © joi.how 2022 / Build #{{--buildnumber--}} by {{--buildagent--}}
