--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -59,3 +59,11 @@
     <%= form.submit %>
   </div>
 <% end %>
+
+<div class="accent-block">
+  <div class="accent-block__charm">
+    <ion-icon name="information-circle"></ion-icon>
+    Need help?
+  </div>
+  There's a concise explanation of every single one of these options on the <a href="<%= help_path %>#getting-started-make-a-link">help page.</a>
+</div>
