--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -83,6 +83,14 @@
       walltaker.toml
     </a>
   </div>
+
+  <div class="accent-block">
+    <div class="accent-block__charm">
+      <ion-icon name="information-circle"></ion-icon>
+      Need help?
+    </div>
+    I wrote up some tips about combating harassment on the <a href="<%= help_path %>#bad-wallpaper">help page.</a>
+  </div>
 <% end %>
 
 <% if current_user %>
