Companion Apps => Clients

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -113,7 +113,7 @@
   account. Enter your username, and then go about your day!
 </p>
 
-<h2 id="companion-apps">Companion Apps</h2>
+<h2 id="companion-apps">Clients</h2>
 <ul>
   <li>
     <a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest" target="_blank">Desktop
