--- a/public/base.css
+++ b/public/base.css
@@ -886,6 +886,10 @@ turbo-cable-stream-source {
 .text-charm__medal-green { background: green; color: white; }
 .text-charm__medal-cum { background: lightgoldenrodyellow; color: black; border: var(--border) 1px solid; }
 
+a[data-controller=user-reference] {
+    overflow: visible !important;
+}
+
 ol {
     counter-reset: orderedlist;
     padding: 0;
