--- a/public/link.css
+++ b/public/link.css
@@ -2,15 +2,15 @@
     display: grid;
     position: relative;
     grid-template-columns: 1fr 130px;
-    grid-template-rows: auto;
+    grid-template-rows: auto auto 1fr;
     gap: 10px;
     padding: 10px 15px;
     border: 1px solid #66666639;
     margin-top: 1.5rem;
     border-radius: 8px;
     grid-template-areas: 'expires      presence'
-                         'blacklist    theme'
-                         'terms        terms'
+                         'terms        theme'
+                         'terms        blacklist'
                          'friends-only friends-only';
     overflow: hidden;
 }
@@ -76,11 +76,11 @@ strong.offline {
 
 .link--theme {
     grid-area: theme;
-    color: var(--border);
-    text-align: right;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+    font-size: 0.8em;
+    color: var(--accent);
 }
 
 .link--theme ion-icon {
@@ -93,6 +93,36 @@ strong.offline {
 
 .link--blacklist {
     grid-area: blacklist;
+    color: var(--text-light);
+    font-size: 0.8em;
+}
+
+.link--blacklist > div {
+    display: flex;
+    align-content: center;
+    gap: 0.1rem 0.5rem;
+    flex-wrap: wrap;
+}
+
+.link--blacklist > strong,
+.link--theme > strong {
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+    font-weight: normal;
+    font-size: 0.8rem;
+    color: var(--border);
+    padding-bottom: 0.2rem;
+}
+
+.link--blacklist > strong > ion-icon,
+.link--theme > strong > ion-icon {
+    font-size: 1rem;
+    width: 1rem;
+}
+
+.link--blacklist span::before {
+    content: '-'
 }
 
 .link--terms {
@@ -106,6 +136,7 @@ strong.offline {
 .link--terms blockquote {
     max-height: 18ch;
     overflow-y: scroll;
+    margin: 0 0 0 4px;
 }
 
 .link--status-bar {
