--- a/public/link.css
+++ b/public/link.css
@@ -38,13 +38,29 @@
 }
 
 .link > .link--backdrop {
-    object-fit: cover;
     height: 100%;
     width: 100%;
     position: absolute;
     z-index: -10;
-    opacity: 0.1;
-    filter: blur(6px) brightness(0.6);
+    opacity: 0.3;
+}
+.link > .link--backdrop::before {
+    content: '';
+    display: block;
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--accent);
+    mix-blend-mode: color;
+    filter: brightness(0.2);
+    z-index: 10;
+}
+.link > .link--backdrop img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: blur(2px) brightness(0.5);
 }
 
 .link em {
