--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
   <% end %>
 </div>
 
-<h2 class="one-line">
+<h2 class="one-line <%= @total_orgasms_by_day.present? ? 'with-chart' : '' %>">
   <ion-icon name="person" class="big"></ion-icon>
   <span data-controller="user-reference" data-user-reference-hide-online-value><%= @user.username %></span>
   <% if @any_links_online %>
@@ -34,6 +34,19 @@
     Last online
     <%= @most_recent_pinged_link && @most_recent_pinged_link[0].last_ping ? time_tag(@most_recent_pinged_link[0].last_ping, (time_ago_in_words @most_recent_pinged_link[0].last_ping) + ' ago') : 'never' %>
   </small>
+
+  <% if @total_orgasms_by_day %>
+    <%= area_chart @total_orgasms_by_day, colors: ["#606575"], legend: false, height: "60px", suffix: '💦', library: {
+      scales: {
+        x: {
+          display: false,
+        },
+        y: {
+          display: false,
+        },
+      }
+    } %>
+  <% end %>
 </h2>
 
 <% unless @is_editing %>
